--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WageConnect Login</title>
     <link rel="stylesheet" href="style.css">
+    <link href="main.html">
     <style>
     body {
     font-family: Arial, sans-serif;
