--- a/login.html
+++ b/login.html
@@ -64,7 +64,7 @@ font-family:Castellar;
 <body>
     <div class="login-container">
         <h1>WageConnect Login</h1>
-<form name="Login Form" action="main.html" method="post">
+<form name="Login Form" action="main.html" method="get">
         <form>
             <label for="fullname">Full Name:</label>
             <input type="text" id="fullname" name="fullname" required>
