--- a/carpenter.html
+++ b/carpenter.html
@@ -96,7 +96,7 @@ header h1 {
     </header>
     <section class="worker-container">
         <div class="worker-profile">
-            <img src="c1.JPG" alt="Worker 1">
+            <img src="c1.jpg" alt="Worker 1">
             <h2>MATTA RAJA SRINIVAS</h2>
             <p><b>Profession:</b> Carpenter<br>
             <b>Experience:</b> 10 years<br>
@@ -109,7 +109,7 @@ header h1 {
         </div>
 
         <div class="worker-profile">
-            <img src="c2.JPG" alt="Worker 2">
+            <img src="c2.jpg" alt="Worker 2">
             <h2>MANDAPATI SURENDRA</h2>
             <p><b>Profession:</b> Carpenter<br>
             <b>Experience:</b> 15 years<br>
