--- a/computer.html
+++ b/computer.html
@@ -96,7 +96,7 @@ header h1 {
     </header>
     <section class="worker-container">
         <div class="worker-profile">
-            <img src="n1.JPG" alt="Worker 1">
+            <img src="n1.jpg" alt="Worker 1">
             <h2>PATEL ABHISHEK</h2>
             <p><b>Profession:</b> Computer Technician<br>
 <b>Education:</b>BTECH Graduate</br>
@@ -111,7 +111,7 @@ header h1 {
         </div>
 
         <div class="worker-profile">
-            <img src="n2.JPG" alt="Worker 2">
+            <img src="n2.jpg" alt="Worker 2">
             <h2>ADDANKI MAHESH </h2>
             <p><b>Profession:</b> Computer Technician<br>
             <b>Experience:</b> 2 years<br>
