--- a/driver.html
+++ b/driver.html
@@ -96,7 +96,7 @@ header h1 {
     </header>
     <section class="worker-container">
         <div class="worker-profile">
-            <img src="d1.JPG" alt="Worker 1">
+            <img src="d1.jpg" alt="Worker 1">
             <h2>BONDDULURI SIVA KUMAR</h2>
             <p><b>Profession:</b> Truck Driver<br>
             <b>Experience:</b> 8 years<br>
