--- a/electrican.html
+++ b/electrican.html
@@ -100,7 +100,7 @@ header h1 {
     </header>
     <section class="worker-container">
         <div class="worker-profile">
-            <img src="e1.JPG" alt="Worker 1">
+            <img src="e1.jpg" alt="Worker 1">
             <h2>VOOSA KARTHIK</h2>
            <p><b>profession:</b> Electrican<br/></br><b>Experience</b>: 6 years</br><b>specialisation: </b>Installing complex wiring systems, setting up lighting systems,ensuring the proper functioning of circuit breakers, and maintaining safety and code standards.</br></br><b>contact info</b>: 89753 72891 <br/><b>city</b>:Machilipatnam</br><b>state:</b>Andhra Pradesh<br/><b>Country:</b>India</br></p></br>
 <a href="tel:8975372891" class="contact-button">Contact Us</a>
@@ -110,7 +110,7 @@ header h1 {
          </section>
 <section class="worker-container">
         <div class="worker-profile">
-            <img src="e2.JPG" alt="Worker 1">
+            <img src="e2.jpg" alt="Worker 1">
             <h2>VOOSA KARTHIK</h2>
            <p><b>profession:</b> Electrican<br/></br><b>Experience</b>: 6 years</br><b>specialisation: </b>Installing complex wiring systems, setting up lighting systems,ensuring the proper functioning of circuit breakers, and maintaining safety and code standards.</br></br><b>contact info</b>: 89753 72891 <br/><b>city</b>:Machilipatnam</br><b>state:</b>Andhra Pradesh<br/><b>Country:</b>India</br></p></br>
 <a href="tel:8975372891" class="contact-button">Contact Us</a>
