--- a/farmer.html
+++ b/farmer.html
@@ -96,7 +96,7 @@ header h1 {
     </header>
     <section class="worker-container">
         <div class="worker-profile">
-            <img src="a1.JPG" alt="Worker 1">
+            <img src="a1.jpg" alt="Worker 1">
             <h2>DWARAM KRISHNA SAI MOHAN</h2>
             <p><b>Profession:</b> farmer<br>
             <b>Experience:</b> 8 years<br>
