--- a/painter.html
+++ b/painter.html
@@ -96,7 +96,7 @@ header h1 {
     </header>
     <section class="worker-container">
         <div class="worker-profile">
-            <img src="p1.JPG" alt="Worker 1">
+            <img src="p1.jpg" alt="Worker 1">
             <h2>MALLAREDDY RAMESH</h2>
              <p><b>Education:</b>Bachelor degree of Arts Graduate</br></p>
             <p><b>Profession:</b> Painter<br>
