--- a/teacher.html
+++ b/teacher.html
@@ -100,7 +100,7 @@ header h1 {
     </header>
     <section class="worker-container">
         <div class="worker-profile">
-            <img src="t1.JPG" alt="Worker 1">
+            <img src="t1.jpg" alt="Worker 1">
             <h2>VALLA LAKSHMI SREE</h2>
            <p><b>profession:</b> Teacher<br/></br><b>Experience</b>: 5 years</br><b>specialisation: </b>tutoring,speak in 5 different languages</br></br><b>contact info</b>: 98253 01728 <br/><b>city</b>:Vijayawada</br><b>state:</b>Andhra Pradesh<br/><b>Country:</b>India</br></p></br>
 <a href="tel: 9825301728" class="contact-button">Contact Us</a>
